Bus indicator integration with frontend